# pythonize

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: de.rs  dict.rs  error.rs  lib.rs  ser.rs  visitor.rs
tests/: test_arbitrary_precision.rs  test_custom_types.rs  test_with_serde_path_to_err.rs
