[package]
name = "pythonize"
version = "0.28.0"
authors = ["David Hewitt <1939362+davidhewitt@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.83"
license = "MIT"
description = "Serde Serializer & Deserializer from Rust <--> Python, backed by PyO3."
homepage = "https://github.com/davidhewitt/pythonize"
repository = "https://github.com/davidhewitt/pythonize"
documentation = "https://docs.rs/crate/pythonize/"


[dependencies]
serde = { version = "1.0", default-features = false, features = ["std"] }
serde_json = { version = "1.0", optional = true, default-features = false, features = ["std"] }
pyo3 = { version = "0.28", default-features = false }

[dev-dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
pyo3 = { version = "0.28", default-features = false, features = ["auto-initialize", "macros", "py-clone"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_bytes = "0.11"
maplit = "1.0.2"
serde_path_to_error = "0.1.15"

[features]
arbitrary_precision = ["serde_json", "serde_json/arbitrary_precision"]
